# Rust_ESP32_IDF

./: .gitignore  Cargo.toml  README.MD  rust-toolchain  sdkconfig.defaults  secrets.toml.example
.cargo/: config.toml
check_spiram/: Cargo.toml  README.MD  build.rs
check_spiram/.cargo/: config.toml
check_spiram/src/: main.rs
lvgl/: Cargo.toml  build.rs
lvgl/.cargo/: config.toml
lvgl/src/: main.rs
scripts/weather_icons/: icons_to_png.py  icons_to_rust_code.py
wifi/: .Cargo.toml.kate-swp  Cargo.toml  README.MD
wifi/.cargo/: config.toml
wifi/src/: main.rs
wifi_display/: .Cargo.toml.kate-swp  Cargo.toml  README.MD  build.rs
wifi_display/src/: main.rs  secrets.rs
wifi_display_openweather/: Cargo.toml  README.MD
wifi_display_openweather/src/: main.rs  secrets.rs
wifi_display_openweather_rtc/: Cargo.toml  README.MD
wifi_display_openweather_rtc/src/: icons.rs  main.rs  time_utils.rs  weather_icons.rs
wifi_display_openweather_rtc_mqtt/: Cargo.toml  README.MD  build.rs  rust-toolchain.toml
wifi_display_openweather_rtc_mqtt/.cargo/: config.toml
wifi_display_openweather_rtc_mqtt/src/: icons.rs  main.rs  secrets.rs  time_utils.rs  weather_icons.rs
