[workspace]
members = [
    "check_spiram",
    "lvgl",
    "wifi",
    "wifi_display",
    "wifi_display_openweather",
    "wifi_display_openweather_rtc",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
embedded-hal = "1.0.0"
embedded-svc = "0.28.1"
esp-idf-hal = "0.45.2"
esp-idf-svc = "0.51.0"
esp-idf-sys = "0.36.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
serde_json = "1.0.145"
profont = "0.7.0"
chrono = "0.4.42"

[profile.dev]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 2
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release]
opt-level = "s"
