[package]
# The name of the package.
name = "wifi"
# The version of the package.
version = "0.1.0"
# The authors of the package.
authors = ["ro011110ot <ro011110ot@gmail.com>"]
# The edition of the package.
edition = "2021"
# The resolver of the package.
resolver = "2"
# The rust version of the package.
rust-version = "1.77"

[[bin]]
# The name of the binary.
name = "wifi"
# Do not use the built-in cargo test harness -> resolve rust-analyzer errors.
harness = false


[features]
default = []

# Enable experimental features of esp-idf-svc.
experimental = ["esp-idf-svc/experimental"]

[dependencies]
# Logging facade.
log = "0.4"
# ESP-IDF services.
esp-idf-svc = "0.51"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc.) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
# Build script for ESP-IDF.
embuild = "0.33"
